--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="header.css">
-    <title>searchPage Virginia Barnes</title>
+    <title>Homepage Virginia Barnes</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
   </head>
