--- a/homepage.html
+++ b/homepage.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="homepage.css">
     <title>Homepage Virginia Barnes</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
@@ -17,6 +18,22 @@
         <a href="#">Policy</a>
       </div>
     </div>
+
+    <div id="description">
+      <h1>Plan your event with PlanMe</h1>
+      <div id="box">
+        <h2>Short blurb on who we are</h2>
+      </div>
+    </div>
+
+    <div id="searchBox">
+      <label class="field" for="location">Location:</label>
+      <div class="value"><input type="text" size="60" value="" name="location" id="location"/></div>
+      <label class="field" for="date">Date:</label>
+      <div class="value"><input type="text" size="60" value="" name="date" id="date"/></div>
+      <label class="field" for="capacity">Capacity:</label>
+      <div class="value"><input type="text" size="60" value="" name="capacity" id="capacity"/></div>
+      <button type="button" onclick="submit()">Go >>></button>
 
   </body>
 </html>
