--- a/homepage.html
+++ b/homepage.html
@@ -20,7 +20,7 @@
     </div>
 
     <div id="description">
-      <h1>Plan your event with PlanMe</h1>
+      <h2>Plan your event with PlanMe</h2>
       <div id="box">
         <h2>Short blurb on who we are</h2>
       </div>
@@ -28,12 +28,13 @@
 
     <div id="searchBox">
       <label class="field" for="location">Location:</label>
-      <div class="value"><input type="text" size="60" value="" name="location" id="location"/></div>
+      <div class="value"><input type="text" size="40" value="" name="location" id="location"/></div>
       <label class="field" for="date">Date:</label>
-      <div class="value"><input type="text" size="60" value="" name="date" id="date"/></div>
+      <div class="value"><input type="text" size="40" value="" name="date" id="date"/></div>
       <label class="field" for="capacity">Capacity:</label>
-      <div class="value"><input type="text" size="60" value="" name="capacity" id="capacity"/></div>
-      <button type="button" onclick="submit()">Go >>></button>
+      <div class="value"><input type="text" size="40" value="" name="capacity" id="capacity"/></div>
+      <button id="goButton" type="button" onclick="submit()">Go >>></button>
+    </div>
 
   </body>
 </html>
