--- a/FAQpage.html
+++ b/FAQpage.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="FAQPage.css">
+    <title>Homepage Virginia Barnes</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
+  </head>
+
+  <body>
+
+    <div class="header">
+      <a href="#" class="logo">Logo</a>
+      <div class="headerWords">
+        <a href="#">About Us</a>
+        <a href="#">FAQ's</a>
+        <a href="#">Policy</a>
+      </div>
+    </div>
