--- a/searchPage.html
+++ b/searchPage.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="searchPage.css">
     <link rel="stylesheet" href="searchPageSideNav.css">
     <link rel="stylesheet" href="header.css">
-    <script type="text/javascript" src="searchPage.js"></script>
     <script type="text/javascript" src="resources/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="searchPage.js"></script>
     <title>searchPage Virginia Barnes</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
@@ -24,36 +24,37 @@
 
     <div class="sidenav">
       <div class="filter">Filter</div>
-      <a><form>Location:<input type="text" name="location"></a>
+      <!-- <a><form>Location:<input type="text" name="location"></a> -->
       <a><form>Date:<input type="date" name="date"></a>
       <a><form>Capacity:<input type="text" name="capacity"></a>
       <a>Price:<select id = "Price">
-               <option value = "1">$0-$100</option>
-               <option value = "2">$0-$200</option>
-               <option value = "3">$0-$300</option>
-               <option value = "4">$0-$400</option>
-               <option value = "5">$0-$500</option>
-               <option value = "6">$500+</option>
-
+        <option value = "6" onclick="filterPrice('1000000')">$500+</option>
+        <option value = "5" onclick="filterPrice('500')">$0-$500</option>
+        <option value = "4" onclick="filterPrice('400')">$0-$400</option>
+        <option value = "3" onclick="filterPrice('300')">$0-$300</option>
+        <option value = "2" onclick="filterPrice('200')">$0-$200</option>
+        <option value = "1" onclick="filterPrice('100')">$0-$100</option>
       </select></a>
     </div>
 
-    <div class="ViewSort">
-      <p>Search Results</p>
-      <a>View:<select id = "view">
-               <option value = "1">20</option>
-               <option value = "2">50</option>
-               <option value = "3">100</option>
-               <option value = "4">All</option>
-      </select></a>
-      <a>Sort:<select id = "sort">
-               <option value = "1">Distance</option>
-               <option value = "2">Price: Low to High</option>
-               <option value = "3">Price High to Low</option>
-      </select></a>
+    <div class="topLine">
+      <a id="search">Search Results<a>
+      <a id = "ViewSort">
+        <a id="view">View:<select id = "view">
+                 <option value = "1">20</option>
+                 <option value = "2">50</option>
+                 <option value = "3">100</option>
+                 <option value = "4">All</option>
+        </select></a>
+        <a id="sort">Sort:<select id = "sort">
+                 <option value = "1">Distance</option>
+                 <option value = "2">Price: Low to High</option>
+                 <option value = "3">Price High to Low</option>
+        </select></a>
+      </a>
     </div>
 
-    <div id ="searchOutput"></div>
+    <div class ="searchOutput"></div>
 
   </body>
 </html>
