About page was created and hyperlinked properly

--- a/homepage.html
+++ b/homepage.html
@@ -3,21 +3,16 @@
   <head>
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="homepage.css">
-    <script type="text/javascript" src="resources/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="homepage.js"></script>
     <title>Homepage Virginia Barnes</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
   </head>
-
   <body>
 
     <div class="header">
-      <a href="#" class="logo">Logo</a>
+      <a href="#" class="logo">PlanMe</a>
       <div class="headerWords">
-        <a href="#">About Us</a>
-        <a href="#">FAQ's</a>
-        <a href="#">Policy</a>
+        <a href="about.html">About Us</a>
       </div>
     </div>
 
@@ -60,7 +55,7 @@
           <option value = "10">Below $1000</option>
         </select></a>
         <br><br>
-        <input type="submit" value="Go"/>
+        <input id="button" type="submit" value="Go"/>
       </form>
     </div>
   </body>
