--- a/searchPage.html
+++ b/searchPage.html
@@ -15,11 +15,9 @@
   <body>
 
     <div class="header">
-      <a href="homepage.html" class="logo">Logo</a>
+      <a href="homepage.html" class="logo">PlanMe</a>
       <div class="headerWords">
-        <a href="#">About Us</a>
-        <a href="#">FAQ's</a>
-        <a href="#">Policy</a>
+        <a href="about.html">About Us</a>
       </div>
     </div>
 
@@ -51,7 +49,7 @@
     </div>
 
     <div class="topLine">
-      <a id="search">Search Results<a>
+      <a id="search"><div class="resultCount"></div><a>
       <a id = "ViewSort">
         <a id="sort">Sort: <select id ="Sort" onchange="filter()">
           <option value = "0">(select sort)</option>
