Fixed hyperlinks after rearragining files

--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="resources/header.css">
     <link rel="stylesheet" href="homepage.css">
     <title>Homepage Virginia Barnes</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -12,7 +12,7 @@
     <div class="header">
       <a href="#" class="logo">PlanMe</a>
       <div class="headerWords">
-        <a href="about.html">About Us</a>
+        <a href="aboutpage/about.html">About Us</a>
       </div>
     </div>
 
@@ -29,7 +29,7 @@
     </div>
 
     <div id="searchBox">
-      <form action="searchPage.html" method="GET">
+      <form action="searchpage/searchPage.html" method="GET">
         <a>Date: <input type="date" name="Date"></a>
         <br><br>
         <a>Capacity: <select id="Capacity" name="Capacity">
