--- a/searchpage/searchPage.html
+++ b/searchpage/searchPage.html
@@ -4,8 +4,8 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="searchPage.css">
     <link rel="stylesheet" href="searchPageSideNav.css">
-    <link rel="stylesheet" href="header.css">
-    <script type="text/javascript" src="resources/jquery-3.1.1.min.js"></script>
+    <link rel="stylesheet" href="../resources/header.css">
+    <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="searchPage.js"></script>
     <title>searchPage Virginia Barnes</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -15,9 +15,9 @@
   <body>
 
     <div class="header">
-      <a href="homepage.html" class="logo">PlanMe</a>
+      <a href="../homepage.html" class="logo">PlanMe</a>
       <div class="headerWords">
-        <a href="about.html">About Us</a>
+        <a href="../aboutpage/about.html">About Us</a>
       </div>
     </div>
 
