--- a/aboutpage/about.html
+++ b/aboutpage/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="../resources/header.css">
     <link rel="stylesheet" href="about.css">
     <title>About Us Page Virginia Barnes</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -11,7 +11,7 @@
   <body>
 
     <div class="header">
-      <a href="homepage.html" class="logo">PlanMe</a>
+      <a href="../homepage.html" class="logo">PlanMe</a>
       <div class="headerWords">
         <a href="#">About Us</a>
       </div>
