--- a/FAQpage.html
+++ b/FAQpage.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="FAQPage.css">
-    <title>Homepage Virginia Barnes</title>
+    <title>FAQ Page Kenneth Lee</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
   </head>
@@ -11,10 +11,36 @@
   <body>
 
     <div class="header">
-      <a href="#" class="logo">Logo</a>
+      <a href="homepage.html" class="logo">Logo</a>
       <div class="headerWords">
         <a href="#">About Us</a>
         <a href="#">FAQ's</a>
         <a href="#">Policy</a>
       </div>
     </div>
+
+    <div class="FAQ">
+      <h2>FAQ</h2>
+      <div class="searchBar"><h2>Search...</h2></div>
+      <div class="scroller">
+        <div class="questionAnswer">
+          <h2>Question</h2>
+          <h2>Answer</h2>
+        </div>
+        <div class="questionAnswer">
+          <h2>Question</h2>
+          <h2>Answer</h2>
+        </div>
+        <div class="questionAnswer">
+          <h2>Question</h2>
+          <h2>Answer</h2>
+        </div>
+        <div class="questionAnswer">
+          <h2>Question</h2>
+          <h2>Answer</h2>
+        </div>
+      </div>
+
+
+  </body>
+</html>
