--- a/aboutpage/about.html
+++ b/aboutpage/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../resources/header.css">
     <link rel="stylesheet" href="about.css">
     <title>About Us Page Virginia Barnes</title>
