--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/header.css">
     <link rel="stylesheet" href="homepage.css">
     <title>Homepage Virginia Barnes</title>
@@ -30,9 +31,9 @@
 
     <div id="searchBox">
       <form action="searchpage/searchPage.html" method="GET">
-        <a>Date: <input type="date" name="Date"></a>
+        <a id="date">Date: <input type="date" name="Date" id="Date"></a>
         <br><br>
-        <a>Capacity: <select id="Capacity" name="Capacity">
+        <a id="capacity">Capacity: <select id="Capacity" name="Capacity">
           <option value = "0">(select capacity)</option>
           <option value = "1">100+</option>
           <option value = "2">200+</option>
@@ -41,7 +42,7 @@
           <option value = "5">500+</option>
         </select></a>
         <br><br>
-        <a>Price: <select id ="Price" name="Price">
+        <a id="price">Price: <select id ="Price" name="Price">
           <option value = "0">(select price)</option>
           <option value = "1">Below $100</option>
           <option value = "2">Below $200</option>
