--- a/FAQpage/FAQpage.html
+++ b/FAQpage/FAQpage.html
@@ -11,11 +11,11 @@
   <body>
 
     <div class="header">
-      <a href="homepage.html" class="logo">Logo</a>
+      <a href="#" class="logo">Logo</a>
       <div class="headerWords">
-        <a href="#">About Us</a>
-        <a href="#">FAQ's</a>
-        <a href="#">Policy</a>
+        <a href="../aboutpage/about.html">About Us</a>
+        <a href="#">FAQ</a>
+        <a href="../policies/policies.html">Policy</a>
       </div>
     </div>
 
