--- a/homepage.html
+++ b/homepage.html
@@ -13,12 +13,13 @@
     <div class="header">
       <a href="#" class="logo">PlanMe</a>
       <div class="headerWords">
-        <a href="aboutpage/about.html">About Us</a>
+        <a href="../aboutpage/about.html">About Us</a>
+        <a href="../FAQpage/FAQpage.hml">FAQ</a>
       </div>
     </div>
 
     <div id="description">
-      <h2>Plan your event with PlanMe</h2>
+      <h3>Plan your event with PlanMe</h3>
       <div id="box">
         <h3>
         Are you planning a big event? A party, formal, or wedding? Well, you have come to the
