--- a/venuepage/VenuePage.html
+++ b/venuepage/VenuePage.html
@@ -5,7 +5,8 @@
   <head>
 
     <link rel="stylesheet" href="VenuePage.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="../resources/header.css">
+    <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="VenuePage.js"></script>
 
     <title>Homepage Virginia Barnes</title>
@@ -19,8 +20,6 @@
 
 
   <body>
-
-
 
     <div class="header">
 
@@ -37,44 +36,28 @@
       </div>
 
     </div>
+    <div class="main">
+
+<h1>Venues Results</h1>
 
 
+<h2>Troy, NY</h2>
+<p>Showing Results for Troy, NY</p>
 
-    <!-- Slideshow container -->
-<div class="slideshow-container">
+<!-- Portfolio Gallery Grid -->
 
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="resources/img1.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
-  </div>
+<div class="row">
 
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="resources/img2.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="resources/img3.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
-  </div>
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
-
-<!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
+  
+<!-- END GRID -->
 </div>
 
+
+
+
+
+
+    </div>
 
 
   </body>
