--- a/FAQpage/FAQpage.html
+++ b/FAQpage/FAQpage.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="header.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../resources/header.css">
     <link rel="stylesheet" href="FAQPage.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>FAQ Page Kenneth Lee</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
@@ -20,24 +23,39 @@
     </div>
 
     <div class="FAQ">
-      <h2>FAQ</h2>
-      <div class="searchBar"><h2>Search...</h2></div>
+      <h1>FAQ</h1>
+      <div class="searchBar">
+        <p1>Search...</p1>
+        <div class="searchButton"><i class="fa fa-search"></i></div>
+      </div>
       <div class="scroller">
         <div class="questionAnswer">
-          <h2>Question</h2>
-          <h2>Answer</h2>
+          <p2>Question: How would you contact the location provider if they are not responding to calls or text messages<br></p2>
+          <p2>Answer</p2>
         </div>
         <div class="questionAnswer">
-          <h2>Question</h2>
-          <h2>Answer</h2>
+          <p2>Question<br></p2>
+          <p2>Answer</p2>
         </div>
         <div class="questionAnswer">
-          <h2>Question</h2>
-          <h2>Answer</h2>
+          <p2>Question<br></p2>
+          <p2>Answer</p2>
         </div>
         <div class="questionAnswer">
-          <h2>Question</h2>
-          <h2>Answer</h2>
+          <p2>Question<br></p2>
+          <p2>Answer</p2>
+        </div>
+        <div class="questionAnswer">
+          <p2>Question<br></p2>
+          <p2>Answer</p2>
+        </div>
+        <div class="questionAnswer">
+          <p2>Question<br></p2>
+          <p2>Answer</p2>
+        </div>
+        <div class="questionAnswer">
+          <p2>Question<br></p2>
+          <p2>Answer</p2>
         </div>
       </div>
 
