--- a/homepage.html
+++ b/homepage.html
@@ -4,12 +4,12 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/header.css">
     <link rel="stylesheet" href="homepage.css">
-    <title>Homepage Virginia Barnes</title>
+    <title>Homepage Kenneth Lee</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
   </head>
   <body>
-
+ 
     <div class="header">
       <a href="#" class="logo">PlanMe</a>
       <div class="headerWords">
