--- a/FAQpage/FAQpage.html
+++ b/FAQpage/FAQpage.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../resources/header.css">
     <link rel="stylesheet" href="FAQPage.css">
+    <script type="text/javascript" src="FAQpage.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>FAQ Page Kenneth Lee</title>
@@ -29,33 +30,7 @@
         <div class="searchButton"><i class="fa fa-search"></i></div>
       </div>
       <div class="scroller">
-        <div class="questionAnswer">
-          <p2>Question: How would you contact the location provider if they are not responding to calls or text messages<br></p2>
-          <p2>Answer</p2>
-        </div>
-        <div class="questionAnswer">
-          <p2>Question<br></p2>
-          <p2>Answer</p2>
-        </div>
-        <div class="questionAnswer">
-          <p2>Question<br></p2>
-          <p2>Answer</p2>
-        </div>
-        <div class="questionAnswer">
-          <p2>Question<br></p2>
-          <p2>Answer</p2>
-        </div>
-        <div class="questionAnswer">
-          <p2>Question<br></p2>
-          <p2>Answer</p2>
-        </div>
-        <div class="questionAnswer">
-          <p2>Question<br></p2>
-          <p2>Answer</p2>
-        </div>
-        <div class="questionAnswer">
-          <p2>Question<br></p2>
-          <p2>Answer</p2>
+        <div id="questionAnswer">
         </div>
       </div>
 
