--- a/FAQpage/FAQpage.html
+++ b/FAQpage/FAQpage.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../resources/header.css">
     <link rel="stylesheet" href="FAQPage.css">
     <script type="text/javascript" src="FAQpage.js"></script>
+    <script type="text/javascript" src="resources/jquery-3.1.1.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>FAQ Page Kenneth Lee</title>
