--- a/FAQpage/FAQpage.html
+++ b/FAQpage/FAQpage.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display<!--Source+Sans+Pro&display=swap" rel="stylesheet">
+    <!--fonts imported from google-->
     <link rel="stylesheet" href="../resources/header.css">
+    <!--importing css file for banner on top-->
     <link rel="stylesheet" href="FAQPage.css">
+    <!--importing css file for whole page-->
     <script type="text/javascript" src="FAQpage.js"></script>
+    <!--importing javascript file to load database into the html file-->
     <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
+    <!--importing jquery from resources-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--importing w3 css from online-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--importing fonts from cloudflare-->
     <title>FAQ Page Kenneth Lee</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
   </head>
 
   <body>
-
+    <!--banner on top of all pages-->
     <div class="header">
       <a href="#" class="logo">Logo</a>
       <div class="headerWords">
@@ -29,8 +36,9 @@
       <div class="searchBar">
         <p1>Search</p1>
         <div class="searchButton"><i class="fa fa-search"></i></div>
+        <!--importing the search icon from w3school-->
       </div>
-      <div class="scroller">
+      <div class="scroller"> <!--have a scroller for all the FAQ-->
         <div id="questionAnswer">
         </div>
       </div>
