--- a/homepage.html
+++ b/homepage.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
-    //importing fonts from google
+    <link href="https:<! ––fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <!--importing fonts from google-->
     <link rel="stylesheet" href="resources/header.css">
-    //linking to css file to create the banner
+    <!--linking to css file to create the banner-->
     <link rel="stylesheet" href="homepage.css">
-    //linkning to the css file for the overall layout of page
+    <!--linking to the css file for the overall layout of page-->
     <title>Homepage Kenneth Lee/Virginia Barnes</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
   </head>
   <body>
-    //banner on top used in all pages of the website
+    <!--banner on top used in all pages of the website-->
     <div class="header">
       <a href="#" class="logo">PlanMe</a>
       <div class="headerWords">
@@ -29,14 +29,14 @@
         right place. PlanMe gives you the ability to filter through venues in Troy, NY. No more
         calling venue after venue to see who is available. Filter venues based off price, capacity,
         and available dates so you can find the ideal venue for your occasion.
-      </h3> //description of PlanMe
+      </h3> <!--description of PlanMe-->
       </div>
     </div>
 
     <div id="searchBox">
-      <form action="searchpage/searchPage.html" method="GET"> //send all this information to searchPage.html
+      <form action="searchpage/searchPage.html" method="GET"> <!--send all this information to searchPage.html-->
         <a id="date">Date: <input type="date" name="Date" id="Date"></a>
-        //gives the user an option to select date on a calendar
+        <!--gives the user an option to select date on a calendar-->
         <br><br>
         <a id="capacity">Capacity: <select id="Capacity" name="Capacity">
           <option value = "0">(select capacity)</option>
@@ -46,7 +46,7 @@
           <option value = "4">400+</option>
           <option value = "5">500+</option>
         </select></a>
-        //A dropbar to filter out the size of the venue
+        <!--A dropbar to filter out the size of the venue-->
         <br><br>
         <a id="price">Price: <select id ="Price" name="Price">
           <option value = "0">(select price)</option>
@@ -61,9 +61,9 @@
           <option value = "9">Below $900</option>
           <option value = "10">Below $1000</option>
         </select></a>
-        //A dropbar to filter out the size of the venue
+        <!--A dropbar to filter out the size of the venue-->
         <br><br>
-        <input id="button" type="submit" value="Go"/> //button to submit information and send to searchPage.html
+        <input id="button" type="submit" value="Go"/> <!--button to submit information and send to searchPage.html-->
       </form>
     </div>
 
