--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https:<! ––fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="/https:fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <!--importing fonts from google-->
     <link rel="stylesheet" href="resources/header.css">
     <!--linking to css file to create the banner-->
@@ -35,20 +35,20 @@
 
     <div id="searchBox">
       <form action="searchpage/searchPage.html" method="GET"> <!--send all this information to searchPage.html-->
-        <a id="date">Date: <input type="date" name="Date" id="Date"></a>
+        Date: <input type="date" name="Date" id="Date">
         <!--gives the user an option to select date on a calendar-->
         <br><br>
-        <a id="capacity">Capacity: <select id="Capacity" name="Capacity">
+        Capacity: <select id="Capacity" name="Capacity">
           <option value = "0">(select capacity)</option>
           <option value = "1">100+</option>
           <option value = "2">200+</option>
           <option value = "3">300+</option>
           <option value = "4">400+</option>
           <option value = "5">500+</option>
-        </select></a>
+        </select>
         <!--A dropbar to filter out the size of the venue-->
         <br><br>
-        <a id="price">Price: <select id ="Price" name="Price">
+        Price: <select id ="Price" name="Price">
           <option value = "0">(select price)</option>
           <option value = "1">Below $100</option>
           <option value = "2">Below $200</option>
@@ -60,7 +60,7 @@
           <option value = "8">Below $800</option>
           <option value = "9">Below $900</option>
           <option value = "10">Below $1000</option>
-        </select></a>
+        </select>
         <!--A dropbar to filter out the size of the venue-->
         <br><br>
         <input id="button" type="submit" value="Go"/> <!--button to submit information and send to searchPage.html-->
