--- a/FAQpage/FAQpage.html
+++ b/FAQpage/FAQpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display<!--Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <!--fonts imported from google-->
     <link rel="stylesheet" href="../resources/header.css">
     <!--importing css file for banner on top-->
@@ -34,7 +34,7 @@
     <div class="FAQ">
       <h1>FAQ</h1>
       <div class="searchBar">
-        <p1>Search</p1>
+        Search
         <div class="searchButton"><i class="fa fa-search"></i></div>
         <!--importing the search icon from w3school-->
       </div>
@@ -42,7 +42,7 @@
         <div id="questionAnswer">
         </div>
       </div>
-
+    </div>
 
   </body>
 </html>
