--- a/policypage/PolicyPage.html
+++ b/policypage/PolicyPage.html
@@ -4,10 +4,10 @@
 
   <head>
 
-    <link rel="stylesheet" href="VenuePage.css">
+    <link rel="stylesheet" href="PolicyPage.css">
     <link rel="stylesheet" href="../resources/header.css">
     <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="VenuePage.js"></script>
+    <script type="text/javascript" src="PolicyPage.js"></script>
 
     <title>Homepage Virginia Barnes</title>
 
@@ -37,12 +37,6 @@
 
     </div>
     <div class="main">
-
-<div class ="venueOutput"></div>
-
-
-
-
 
     </div>
 
