--- a/homepage.html
+++ b/homepage.html
@@ -31,13 +31,34 @@
     </div>
 
     <div id="searchBox">
-      <label class="field" for="location">Location:</label>
-      <div class="value"><input type="text" size="40" value="" name="location" id="location"/></div>
-      <label class="field" for="date">Date:</label>
-      <div class="value"><input type="text" size="40" value="" name="date" id="date"/></div>
-      <label class="field" for="capacity">Capacity:</label>
-      <div class="value"><input type="text" size="40" value="" name="capacity" id="capacity"/></div>
-      <button id="goButton" type="button" onclick="submit()">Go >>></button>
+      <form action="searchpage/searchPage.html" method="GET">
+        <a id="date">Date: <input type="date" name="Date" id="Date"></a>
+        <br><br>
+        <a id="capacity">Capacity: <select id="Capacity" name="Capacity">
+          <option value = "0">(select capacity)</option>
+          <option value = "1">100+</option>
+          <option value = "2">200+</option>
+          <option value = "3">300+</option>
+          <option value = "4">400+</option>
+          <option value = "5">500+</option>
+        </select></a>
+        <br><br>
+        <a id="price">Price: <select id ="Price" name="Price">
+          <option value = "0">(select price)</option>
+          <option value = "1">Below $100</option>
+          <option value = "2">Below $200</option>
+          <option value = "3">Below $300</option>
+          <option value = "4">Below $400</option>
+          <option value = "5">Below $500</option>
+          <option value = "6">Below $600</option>
+          <option value = "7">Below $700</option>
+          <option value = "8">Below $800</option>
+          <option value = "9">Below $900</option>
+          <option value = "10">Below $1000</option>
+        </select></a>
+        <br><br>
+        <input id="button" type="submit" value="Go"/>
+      </form>
     </div>
 
   </body>
