Made the homepage look better

--- a/homepage.html
+++ b/homepage.html
@@ -19,7 +19,7 @@
     </div>
 
     <div id="description">
-      <h3>Plan your event with PlanMe</h3>
+      <h3><div id="slogan">Plan your event with PlanMe</div></h3>
       <div id="box">
         <h3>
         Are you planning a big event? A party, formal, or wedding? Well, you have come to the
@@ -31,7 +31,7 @@
     </div>
 
     <div id="searchBox">
-      <form action="searchpage/searchPage.html" method="GET">
+      <form action="searchpage/searchPage.html" method="GET"> <br>
         <a id="date">Date: <input type="date" name="Date" id="Date"></a>
         <br><br>
         <a id="capacity">Capacity: <select id="Capacity" name="Capacity">
