Venue page functionality works

--- a/venuepage/VenuePage.html
+++ b/venuepage/VenuePage.html
@@ -40,18 +40,7 @@
 
 <h1>Venues Results</h1>
 
-
-<h2>Troy, NY</h2>
-<p>Showing Results for Troy, NY</p>
-
-<!-- Portfolio Gallery Grid -->
-
-<div class="row">
-
-  
-<!-- END GRID -->
-</div>
-
+<div class ="venueOutput"></div>
 
 
 
