Fixing up hyperlinks on each page

--- a/FAQpage/FAQpage.html
+++ b/FAQpage/FAQpage.html
@@ -16,11 +16,10 @@
   <body>
 
     <div class="header">
-      <a href="#" class="logo">Logo</a>
+      <a href="../homepage.html" class="logo">PlanMe</a>
       <div class="headerWords">
         <a href="../aboutpage/about.html">About Us</a>
         <a href="#">FAQ</a>
-        <a href="../policies/policies.html">Policy</a>
       </div>
     </div>
 
