--- a/aboutpage/about.html
+++ b/aboutpage/about.html
@@ -15,6 +15,7 @@
       <a href="../homepage.html" class="logo">PlanMe</a>
       <div class="headerWords">
         <a href="#">About Us</a>
+        <a href="../FAQpage/FAQpage.html">FAQ</a>
       </div>
     </div>
 
