--- a/homepage.html
+++ b/homepage.html
@@ -9,12 +9,12 @@
 
   </head>
   <body>
- 
+
     <div class="header">
       <a href="#" class="logo">PlanMe</a>
       <div class="headerWords">
-        <a href="../aboutpage/about.html">About Us</a>
-        <a href="../FAQpage/FAQpage.hml">FAQ</a>
+        <a href="aboutpage/about.html">About Us</a>
+        <a href="FAQpage/FAQpage.html">FAQ</a>
       </div>
     </div>
 
