--- a/searchpage/searchPage.html
+++ b/searchpage/searchPage.html
@@ -18,6 +18,7 @@
       <a href="../homepage.html" class="logo">PlanMe</a>
       <div class="headerWords">
         <a href="../aboutpage/about.html">About Us</a>
+        <a href="../FAQpage/FAQpage.html">FAQ</a>
       </div>
     </div>
 
