--- a/venuepage/VenuePage.html
+++ b/venuepage/VenuePage.html
@@ -3,9 +3,9 @@
 <html>
 
   <head>
-
-    <link rel="stylesheet" href="VenuePage.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../resources/header.css">
+    <link rel="stylesheet" href="VenuePage.css">
     <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="VenuePage.js"></script>
 
@@ -22,21 +22,12 @@
   <body>
 
     <div class="header">
-
-      <a href="#" class="logo">Logo</a>
-
+      <a href="../homepage.html" class="logo">PlanMe</a>
       <div class="headerWords">
-
-        <a href="#">About Us</a>
-
-        <a href="#">FAQ's</a>
-
-        <a href="#">Policy</a>
-
+        <a href="../aboutpage/about.html">About Us</a>
+        <a href="../FAQpage/FAQpage.html">FAQ</a>
       </div>
-
     </div>
-    <div class="main">
 
 <div class ="venueOutput"></div>
 
