--- a/homepage.html
+++ b/homepage.html
@@ -2,39 +2,40 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="resources/header.css">
+    <link rel="stylesheet" href="resources/header.css"> <!--Stylesheet just for the header-->
     <link rel="stylesheet" href="homepage.css">
-    <title>Homepage Kenneth Lee</title>
+    <title>Homepage</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
   </head>
   <body>
 
-    <div class="header">
-      <a href="#" class="logo">PlanMe</a>
+    <div class="header"> <!--Header content-->
+      <a href="#" class="logo">PlanMe</a> <!--Logo goes here-->
       <div class="headerWords">
-        <a href="aboutpage/about.html">About Us</a>
-        <a href="FAQpage/FAQpage.html">FAQ</a>
+        <a href="aboutpage/about.html">About Us</a> <!--Link to the About Page-->
+        <a href="FAQpage/FAQpage.html">FAQ</a> <!--Link to the FAQs Page-->
       </div>
     </div>
 
-    <div id="description">
-      <h3><div id="slogan">Plan your event with PlanMe</div></h3>
-      <div id="box">
+    <div id="description"> <!--Describes what the Web App is-->
+      <h3><div id="slogan">Plan your event with PlanMe</div></h3> <!--Slogan-->
+      <div id="box"> <!--Paragraph of description of Web App-->
         <h3>
-        Are you planning a big event? A party, formal, or wedding? Well, you have come to the
-        right place. PlanMe gives you the ability to filter through venues in Troy, NY. No more
-        calling venue after venue to see who is available. Filter venues based off price, capacity,
-        and available dates so you can find the ideal venue for your occasion.
-      </h3>
+          Are you planning a big event? A party, formal, or wedding? Well, you have come to the
+          right place. PlanMe gives you the ability to filter through venues in Troy, NY. No more
+          calling venue after venue to see who is available. Filter venues based off price, capacity,
+          and available dates so you can find the ideal venue for your occasion.
+        </h3>
       </div>
     </div>
 
-    <div id="searchBox">
-      <form action="searchpage/searchPage.html" method="GET"> <br>
-        <a id="date">Date: <input type="date" name="Date" id="Date"></a>
+    <div id="searchBox"> <!--User can begin search for venues-->
+      <form action="searchpage/searchPage.html" method="GET"> <!--Will send form data to searchpage.html-->
+        <br> <!--newline-->
+        <a id="date">Date: <input type="date" name="Date" id="Date"></a> <!--User inputs the date they want for their event-->
         <br><br>
-        <a id="capacity">Capacity: <select id="Capacity" name="Capacity">
+        <a id="capacity">Capacity: <select id="Capacity" name="Capacity"> <!--User inputs the capacity they want for their event-->
           <option value = "0">(select capacity)</option>
           <option value = "1">100+</option>
           <option value = "2">200+</option>
@@ -43,7 +44,7 @@
           <option value = "5">500+</option>
         </select></a>
         <br><br>
-        <a id="price">Price: <select id ="Price" name="Price">
+        <a id="price">Price: <select id ="Price" name="Price"> <!--User inputs the price they want for their event-->
           <option value = "0">(select price)</option>
           <option value = "1">Below $100</option>
           <option value = "2">Below $200</option>
@@ -57,9 +58,9 @@
           <option value = "10">Below $1000</option>
         </select></a>
         <br><br>
-        <input id="button" type="submit" value="Go"/>
+        <input id="button" type="submit" value="Go"/> <!--Submit the form information and redirect to searchpage.html-->
       </form>
     </div>
-
+    
   </body>
 </html>
