--- a/aboutpage/about.html
+++ b/aboutpage/about.html
@@ -18,7 +18,6 @@
         <a href="../FAQpage/FAQpage.html">FAQ</a>
       </div>
     </div>
-
     <div id="description">
       <h1>About Us</h1>
       <div id="box">
@@ -33,6 +32,24 @@
         her a lot of time and could save the time of any persons or group on RPI's
         campus or in the Troy, NY, area who is planning a large event.
       </h3>
+      </div>
+      <br><br>
+      <h1>Members of the group</h1>
+      <div id="bios">
+        <img src="pictures/Kenneth.jpg" alt="Kenneth Photo" width="100"
+        height="200">
+        <div id = 'text'>
+          <h1 id ="title">Kenneth Lee</h1>
+          <p>
+            My name is Kenneth Lee and I'm a freshman at RPI. I am majoring in
+            ITWS and this website is part of the projects we have to complete for
+            class.
+          </p></div>
+        <img src="pictures/Virginia.png" alt="Virginia Photo" width="100"
+        height="300">
+        <img src="pictures/Quadir.png" alt="Quadir Photo" width="100"
+        height="300">
+        </div>
       </div>
     </div>
   </body>
