Policy Page Finished
.

--- a/policypage/PolicyPage.html
+++ b/policypage/PolicyPage.html
@@ -20,22 +20,24 @@
 
 
   <body>
-
-    <div class="header">
-
-      <a href="#" class="logo">Logo</a>
-
+    <div class="header"> <!--Header content-->
+      <a href="../homepage.html" class="logo">PlanMe</a> <!--Logo goes here-->
       <div class="headerWords">
-
-        <a href="#">About Us</a>
-
-        <a href="#">FAQ's</a>
-
-        <a href="#">Policy</a>
-
+        <a href="../aboutpage/about.html">About Us</a> <!--Link to the About Page-->
+        <a href="../FAQpage/FAQpage.html">FAQ</a> <!--Link to the 
+        FAQs Page-->
+        <a href="../policypage/PolicyPage.html">Policy Page</a>
       </div>
-
     </div>
+
+    <h3>PlanMe Company Policy</h3>
+    <p>
+      1. PlanMe is a company based on trust and we expect venues not to overbook as well as users not to cancel.
+    </p>
+    <p>
+      2. PlanMe is not responsible for any mishaps or misunderstanding between you and the venue
+    </p>
+
     <div class="main">
 
     </div>
