--- a/venuepage/VenuePage.html
+++ b/venuepage/VenuePage.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="/https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="../resources/header.css"> <!--Stylesheet just for the header-->
     <link rel="stylesheet" href="VenuePage.css">
     <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
@@ -18,7 +18,9 @@
       <a href="../homepage.html" class="logo">PlanMe</a> <!--Logo goes here-->
       <div class="headerWords">
         <a href="../aboutpage/about.html">About Us</a> <!--Link to the About Page-->
-        <a href="../FAQpage/FAQpage.html">FAQ</a> <!--Link to the FAQs Page-->
+        <a href="../FAQpage/FAQpage.html">FAQ</a> <!--Link to the 
+        FAQs Page-->
+        <a href="../policypage/PolicyPage.html">Policy Page</a>
       </div>
     </div>
 
