--- a/aboutpage/about.html
+++ b/aboutpage/about.html
@@ -36,19 +36,18 @@
       <br><br>
       <h1>Members of the group</h1>
       <div id="bios">
-        <img src="pictures/Kenneth.jpg" alt="Kenneth Photo" width="100"
-        height="200">
+        <img src="pictures/Kenneth.jpg" alt="Kenneth Photo" class="pic">
         <div id = 'text'>
           <h1 id ="title">Kenneth Lee</h1>
           <p>
-            My name is Kenneth Lee and I'm a freshman at RPI. I am majoring in
-            ITWS and this website is part of the projects we have to complete for
+            My name is Kenneth Lee and I'm a freshman at RPI. I am majoring in<br>
+            ITWS and this website is part of the projects we have to complete for<br>
             class.
-          </p></div>
-        <img src="pictures/Virginia.png" alt="Virginia Photo" width="100"
-        height="300">
-        <img src="pictures/Quadir.png" alt="Quadir Photo" width="100"
-        height="300">
+          </p>
+        </div>
+        <img src="pictures/Virginia.png" alt="Virginia Photo"class="pic">
+        <img src="pictures/Quadir.png" alt="Quadir Photo"class="pic">
+        <!-- Structure taken from stackoverflow: https://stackoverflow.com/questions/41631517/aligning-multiple-img-with-float -->
         </div>
       </div>
     </div>
