--- a/aboutpage/about.html
+++ b/aboutpage/about.html
@@ -35,7 +35,7 @@
       </div>
       <br><br>
       <h1>Members of the group</h1>
-      <div id="bios">
+      <div class="bios">
         <img src="pictures/Kenneth.jpg" alt="Kenneth Photo" class="pic">
         <div id = 'text'>
           <h1 id ="title">Kenneth Lee</h1>
@@ -45,11 +45,14 @@
             class.
           </p>
         </div>
-        <img src="pictures/Virginia.png" alt="Virginia Photo"class="pic">
-        <img src="pictures/Quadir.png" alt="Quadir Photo"class="pic">
-        <!-- Structure taken from stackoverflow: https://stackoverflow.com/questions/41631517/aligning-multiple-img-with-float -->
-        </div>
       </div>
-    </div>
+      <div class="bios">
+        <img src="pictures/Virginia.png" alt="Virginia Photo"class="pic">
+      </div>
+      <div class="bios">
+        <img src="pictures/Quadir.png" alt="Quadir Photo"class="pic">
+      </div>
+        <!-- Structure taken from stackoverflow: https://stackoverflow.com/questions/41631517/aligning-multiple-img-with-float -->
+      </div>
   </body>
 </html>
