--- a/venuepage/VenuePage.html
+++ b/venuepage/VenuePage.html
@@ -25,6 +25,6 @@
     </div>
 
     <div class ="venueOutput"></div> <!--Fill the venueOutput with the venue's information from venuepage.js-->
-
+    <button type="button" class="button1" onclick="popup()" >Book Now</button>
   </body>
 </html>
