--- a/FAQpage/FAQpage.html
+++ b/FAQpage/FAQpage.html
@@ -27,6 +27,7 @@
       <div class="headerWords">
         <a href="../aboutpage/about.html">About Us</a>
         <a href="#">FAQ</a>
+        <a href="../policypage/PolicyPage.html">Policy</a>
       </div>
     </div>
 
