--- a/homepage.html
+++ b/homepage.html
@@ -18,6 +18,7 @@
       <div class="headerWords">
         <a href="aboutpage/about.html">About Us</a> <!--Link to the About Page-->
         <a href="FAQpage/FAQpage.html">FAQ</a> <!--Link to the FAQs Page-->
+        <a href="policypage/PolicyPage.html">Policy</a> <!--Link to the FAQs Page-->
       </div>
     </div>
 
