Commented searchpage.html

--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/header.css"> <!--Stylesheet just for the header-->
     <link rel="stylesheet" href="homepage.css">
-    <title>Homepage</title>
+    <title>Home Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
   </head>
